--- a/ise-lab-knowledge-representation.bib
+++ b/ise-lab-knowledge-representation.bib
@@ -56,3 +56,56 @@
     url = "https://archive.ics.uci.edu/ml/datasets/iris",
     note = "[Online; accessed 11-March-2022]"
 }
+
+@Article{Robinson1965,
+  Author	= {Robinson, J. A.},
+  Title		= {A Machine-Oriented Logic Based on the Resolution Principle},
+  Journal	= {Journal of the ACM},
+  Year		= 1965,
+  Volume	= 12,
+  Number	= 1,
+  Pages		= {23--41}
+}
+
+@Article{KowVan1970,
+  Author	= {van Emden, Maarten and Kowalski, Robert},
+  Title		= {The Semantics of Predicate Logic as a Programming Language},
+  Journal	= {Journal of the ACM},
+  Year		= 1976,
+  Volume	= 23,
+  Pages		= {733--742}
+}
+
+@Article{Korner2022,
+  Author = {Körner, Philipp and Beuschel, Michael and Barbosa, João and Costa, Vítor Santos and Dahl, Verónica and Hermenegildo, Manuel V. and Morales, Jose F. and Wielemaker, Jan and Diaz, Daniel and Abreu, Salvador and Ciatto, Giovanni},
+  Title		= {Fifty Years of Prolog and Beyond},
+  Journal	= {Theory and Practice of Logic Programming},
+  Year		= 2022,
+  Note = "(To appear on TPLP 2022)",
+  Url = {https://arxiv.org/abs/2201.10816}
+}
+
+@InCollection{Clark1978,
+  Author	= {Clark, Keith L.},
+  Title		= {Negation as Failure},
+  Editor	= {Gallaire, Herv{\'e} and Minker, Jack},
+  Booktitle	= {Logic and Data Bases},
+  Publisher	= {Springer},
+  Year		= 1978,
+  Pages		= {293--322}
+}
+
+@article{MartelliM82,
+  author    = {Martelli, Alberto and Montanari, Ugo},
+  title     = {An Efficient Unification Algorithm},
+  journal   = {{ACM} Trans. Program. Lang. Syst.},
+  volume    = {4},
+  number    = {2},
+  pages     = {258--282},
+  year      = {1982},
+  url       = {https://doi.org/10.1145/357162.357169},
+  doi       = {10.1145/357162.357169},
+  timestamp = {Wed, 14 Nov 2018 10:30:40 +0100},
+  biburl    = {https://dblp.org/rec/journals/toplas/MartelliM82.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
