feat: rename for eass

--- a/eass23-cl-in-mas.tex
+++ b/eass23-cl-in-mas.tex
@@ -10,22 +10,30 @@
 %\documentclass[handout]{beamer}\mode<handout>{\usetheme{AMSBolognaFC}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage{ise-lab-common}
-\usepackage{ise-lab-knowledge-representation}
+\usepackage{eass23-cl-in-mas}
 % version
 \newcommand{\versionmajor}{1}
-\newcommand{\versionminor}{1}
-\newcommand{\versionpatch}{1}
+\newcommand{\versionminor}{0}
+\newcommand{\versionpatch}{0}
 \newcommand{\version}{\versionmajor.\versionminor.\versionpatch}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\title[\currentLab{} -- Knowledge Representation]{Knowledge Representation with Horn Clauses}
+\title[CL in MAS]{On the role of computational logic in MAS}
 %
-\subtitle{\courseName{} / Module \moduleN{} (\courseAcronym)}
+\subtitle{Practice with \twopkt}
 %
 \author[\sspeaker{\gcShort}]{\speaker{\gcFull} \\ \gcEmail}
 %
 \institute[\disiShort, \uniboShort]{\disi{} (\disiShort)\\\unibo}
 %
-\date[A.Y. \academicYearShort{} (v.\ \version)]{Academic Year \academicYear{}\\(version \version)}
+\date[EASS 2023 (v.\ \version)]{
+    23rd European Agent Systems Summer School
+    \\
+    July 17, 2023
+    \\
+    Prague, Czech Republic
+    \\
+    (version \version)
+}
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
@@ -1354,7 +1362,7 @@
     \scriptsize
 %	\footnotesize
     \bibliographystyle{apalike-AMS}
-    \bibliography{ise-lab-knowledge-representation}
+    \bibliography{eass23-cl-in-mas}
 \end{frame}
 %/////////
 
